--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,34 @@
 .navbar-custom{
-	  background-color:#0059b7;
+	  background-color: #0059b7;
 }
 
 .a-custom{
 	color:ffffff;
+}
+
+.responsive-iframe-container {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 30px;
+height: 0;
+overflow: hidden;
+}
+
+.responsive-iframe-container iframe,
+.vresponsive-iframe-container object,
+.vresponsive-iframe-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
+.navbar .nav > li > a {
+    color:  white;
+}
+
+.navbar-left-custom{
+	padding-left: 5px;
+	padding-top: 2px;
 }
